--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Boleros</title>
+	<title>Home | Boleros</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -20,7 +20,7 @@
 
 	<!-- Header area section [end] -->
 	<main>
-	<div class="header-section p-3">
+	<div class="header-section p-3" id="header_Sticky">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -39,7 +39,7 @@
 					<div class="menu-bar text-center">
 						<a href="#cocktails">Cocktails</a>
 						<a href="#rum">Rum</a>
-						<a href="#wine">Wine & Beer</a>
+						<a href="#wine_beer">Wine & Beer</a>
 					</div>
 				</div>
 			</div>
@@ -49,15 +49,21 @@
 	<!-- Header area section [end] -->
 
 	<!-- slider 0ne section [end] -->
-	<div class="slider-one-area">
+	<div class="slider-one-area" id="cocktails">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-lg-4 col-12">
-					<div class="celed-area">
-						<h1>
-							CELEBRATE NATIONAL MOJITO DAY!
+				<div class="col-lg-5 col-12 respo-mobile-cele">
+					<div class="celed-area text-right">
+						<h1 class="celed-area-Txt one">
+							CELEBRATE
 						</h1>
-						<p style="color: #fff;">
+						<h1 class="two">
+							NATIONAL
+						</h1>
+						<h1 class="three">
+							MOJITO  DAY!
+						</h1>
+						<p class="text-left" style="color: #fff;">
 							Ask Your Bartender About our featured <br>
 							flavored Mojitos
 						</p>
@@ -81,7 +87,7 @@
 		<div class="container-fluid">
 			<div class="row justify-content-end">
 				<div class="mobile-div-img col-6 col-lg-4">
-					<img src="images/mobileview/Individualartpieces/HemingwayArt-01.png" class="w-100 wow fadeIn" data-wow-delay="0.9s">
+					<img src="images/media03.png" class="w-100 wow fadeIn" data-wow-delay="0.4s">
 				</div>
 			</div>
 			
@@ -178,7 +184,7 @@
 	<!-- slider three section [start] -->
 	<div class="slider-thr-area">
 		<div class="container-fluid">
-			<div class="col-lg-4 ml-3">
+			<div class="col-lg-4 md-ml-0 ml-3">
 				<div class="papa-area-section">
 					<h1>
 						PAPA's FAVORITES
@@ -222,7 +228,7 @@
 							CHA-CHA-CHA <span>9.95</span>
 						</h1>
 					</div>
-					<div class="row pl-3">
+					<div class="row pl-3 respo-mobile-Hurricane" style="transform: rotate(-1deg);">
 						<div class="col-lg-6 col-12	md-p-0">
 							<div class="cha-Txt">
 								<h4>
@@ -258,7 +264,7 @@
 				</div>
 			</div>
 			<div class="row justify-content-end">
-				<div class="col-lg-4 mr-5">
+				<div class="col-lg-4 mr-5 cha-img">
 					<img src="images/desktopview/Individualartpieces/CaribbeanPainkiller_orange1.png" class="w-100 img-gallery-one wow fadeInRight" data-wow-delay="0.8s">
 				</div>
 			</div>
@@ -276,9 +282,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="row m-0">
+		<div class="row m-0 justify-content-center">
 			<div class="container-fluid">
-				<div class="col-lg-6 md-ml-0 md-rotate-1" style="margin-left: 100px;">
+				<div class="col-lg-6 respo-mobile-light md-ml-0 md-rotate-1" style="margin-left: 100px;">
 					<div class="mambo-Txt">
 						<h1 class="">
 							MAMBO <span>13</span>
@@ -365,7 +371,7 @@
 				<div class="col-lg-4 mambo-area Custome-rumba custom-block-area">
 					<img src="images/desktopview/Individualartpieces/CubanGinger_Bluegreen1.png" class="w-100 two-img wow fadeInRight" data-wow-delay="0.6s">
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 respo-mobile-light">
 					<div class="papa-area-section">
 						<div class="rumba-area">
 							<h1>
@@ -419,7 +425,7 @@
 	<!-- slider six section [end] -->
 
 	<!-- slider sev section [start] -->
-	<div class="slider-sev-are">
+	<div class="slider-sev-are" id="rum">
 		<div class="container-fluid">
 			<div class="main-extra">
 				<div class="row">
@@ -429,10 +435,10 @@
 								RUM
 							</h1>
 						</div>
-						<div class="row m-0">
+						<div class="row m-0" style="transform: rotate(-2deg) !important;">
 							<div class="col-lg-5 md-p-0">
 								<div class="rum-Txt md-ml-0 ml-5">
-									<p class="md-mb-0">
+									<p class="md-mb-0" style="color: #4a4a4a;">
 										Rum is a distilled alcoholic beverage made <br>
 										from sugarcane byproducts, such as molasses <br>
 										or directly from sugarcane juice, by a process <br>
@@ -453,7 +459,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="row mt-4 md-rotate-1"  style="transform: rotate(-2deg) !important;">
+						<div class="row mt-4 md-rotate-1 respo-mobile-light"  style="transform: rotate(-1deg) !important;">
 							<div class="col-lg-5 md-mb-0">
 								<div class="row align-items-center">
 									<div class="col-lg-12">
@@ -522,10 +528,12 @@
 	<!-- slider sev section [end] -->
 
 	<!-- slider Eight section [start] -->
-		<div class="slider-eig-area">
+		<div class="slider-eig-area" id="wine_beer">
 			<div class="container">
 				<div class="row justify-content-end">
-					<div class="col-lg-8" style="transform: rotate(-2deg) !important;">
+					<div class="col-lg-8 respo-mobile-wine" style="transform: rotate(-2deg) !important;
+												
+					">
 						<div class="wine-area">
 							<h1>
 								WiNE
@@ -558,7 +566,7 @@
 						</div>
 
 					</div>
-					<div class="col-lg-8" style="transform: rotate(-2deg) !important;">
+					<div class="col-lg-8 mt-3" style="transform: rotate(-2deg) !important;">
 								<div class="beer-area">
 									<h1>
 										BEER
@@ -637,22 +645,22 @@
 			<div class="col-lg-12">
 				<div class="social-icon text-center">
 					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<img src="https://static.wixstatic.com/media/aebe5b6fd55f471a936c72ff2c8289d7.png/v1/fill/w_14,h_14,al_c,q_85,usm_0.66_1.00_0.01/aebe5b6fd55f471a936c72ff2c8289d7.webp">
+						<i class="fa fa-facebook" aria-hidden="true"></i>
 					</a>
 					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<img src="https://static.wixstatic.com/media/aeb686ff41244d85bc1232fcf7325ec0.png/v1/fill/w_14,h_14,al_c,q_85,usm_0.66_1.00_0.01/aeb686ff41244d85bc1232fcf7325ec0.webp">
+						<i class="fa fa-twitter" aria-hidden="true"></i>
 					</a>
 					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<img src="https://static.wixstatic.com/media/a1fed5f687844a6e8f42e017f71dfcb4.png/v1/fill/w_15,h_14,al_c,q_85,usm_0.66_1.00_0.01/a1fed5f687844a6e8f42e017f71dfcb4.webp">
+						<i class="fa fa-youtube-play" aria-hidden="true"></i>
 					</a>
 					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<img src="https://static.wixstatic.com/media/9829b3f85ef647adb29e05b1a70208ba.png/v1/fill/w_14,h_14,al_c,q_85,usm_0.66_1.00_0.01/9829b3f85ef647adb29e05b1a70208ba.webp">
+						<i class="fa fa-pinterest-p" aria-hidden="true"></i>
 					</a>
 					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<img src="https://static.wixstatic.com/media/cb4f5a4e9d894b6780fc8ec1a0faa63f.png/v1/fill/w_14,h_14,al_c,q_85,usm_0.66_1.00_0.01/cb4f5a4e9d894b6780fc8ec1a0faa63f.webp">
+						<i class="fa fa-tumblr" aria-hidden="true"></i>
 					</a>
 					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<img src="https://static.wixstatic.com/media/40898a93cfff4578b1779073137eb1b4.png/v1/fill/w_15,h_14,al_c,q_85,usm_0.66_1.00_0.01/40898a93cfff4578b1779073137eb1b4.webp">
+						<i class="fa fa-instagram" aria-hidden="true"></i>
 					</a>
 				</div>
 				<p class="text-center mt-2">
@@ -678,6 +686,21 @@
 <script src="js/wow.min.js"></script>
 <script>
 	new WOW().init();
+</script>
+<script type="text/javascript">
+	// Sticky Header
+window.onscroll = function() {
+  myFunction()
+};
+var header = document.getElementById("header_Sticky");
+var sticky = header.offsetTop;
+function myFunction() {
+  if (window.pageYOffset > sticky) {
+    header.classList.add("sticky");
+  } else {
+    header.classList.remove("sticky");
+  }
+}
 </script>
 
 </html>
