latest changes of review 2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 
-
 </head>
 <body>
 
@@ -20,7 +19,7 @@
 
 	<!-- Header area section [end] -->
 	<main>
-	<div class="header-section p-3" id="header_Sticky">
+	<div class="header-section p-3" id="header_Stick">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -52,7 +51,7 @@
 	<div class="slider-one-area" id="cocktails">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-lg-5 col-12 respo-mobile-cele">
+				<div class="col-lg-4 col-12 respo-mobile-cele">
 					<div class="celed-area text-right">
 						<h1 class="celed-area-Txt one">
 							CELEBRATE
@@ -63,7 +62,7 @@
 						<h1 class="three">
 							MOJITO  DAY!
 						</h1>
-						<p class="text-left" style="color: #fff;">
+						<p class="text-left mb-0" style="color: #fff;">
 							Ask Your Bartender About our featured <br>
 							flavored Mojitos
 						</p>
@@ -71,8 +70,8 @@
 				</div>
 			</div>
 			<div class="row justify-content-center">
-				<div class="col-lg-7 col-12 md-line-0" style="line-height: 50vh;">
-					<div class="img-gallery">
+				<div class="col-lg-8 col-12 md-line-0" style="line-height: 50vh;">
+					<div class="img-gallery mb-5">
 						<img src="images/desktopview/Individualartpieces/Mojito_Group_PictureFrame.png" class="w-100 img-gallery-one wow rotateInDownLeft" data-wow-delay="0.5s">
 						<img src="images/desktopview/Individualartpieces/Mojito_UpClose_PictureFrame.png" class="w-100 img-gallery-two wow rotateInDownRight" data-wow-delay="0.5s">
 					</div>
@@ -193,13 +192,16 @@
 						The Hemingway Daiquiri 
 					</h4>
 					<p>
-						White rum, maraschino liqueur, fresh lime <br> juice and fresh grapefruit juice 9.95 
+						White rum, maraschino liqueur, fresh lime juice <br> 
+						and fresh grapefruit juice 9.95 
 					</p>
 					<h4 class="mt-3">	
-						The Hemingway Daiquiri 
+						Hotel Nacional 
 					</h4>
 					<p>
-						White rum, maraschino liqueur, fresh lime <br> juice and fresh grapefruit juice 9.95 
+						 Starr rum, Atlantico Reserva rum, apricot liqueur <br>
+						 Fresh lime Juice and pineapple Juice 13
+
 					</p>
 				</div>
 			</div>
@@ -265,7 +267,7 @@
 			</div>
 			<div class="row justify-content-end">
 				<div class="col-lg-4 mr-5 cha-img">
-					<img src="images/desktopview/Individualartpieces/CaribbeanPainkiller_orange1.png" class="w-100 img-gallery-one wow fadeInRight" data-wow-delay="0.8s">
+					<img src="images/desktopview/Individualartpieces/CaribbeanPainkiller_orange2.png" class="w-100 img-gallery-one wow fadeInRight" data-wow-delay="0.8s">
 				</div>
 			</div>
 		</div>
@@ -371,7 +373,7 @@
 				<div class="col-lg-4 mambo-area Custome-rumba custom-block-area">
 					<img src="images/desktopview/Individualartpieces/CubanGinger_Bluegreen1.png" class="w-100 two-img wow fadeInRight" data-wow-delay="0.6s">
 				</div>
-				<div class="col-lg-4 respo-mobile-light">
+				<div class="col-lg-4 respo-mobile-light" style="transform: rotate(3deg) !important;">
 					<div class="papa-area-section">
 						<div class="rumba-area">
 							<h1>
@@ -645,23 +647,15 @@
 			<div class="col-lg-12">
 				<div class="social-icon text-center">
 					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<i class="fa fa-facebook" aria-hidden="true"></i>
+						<img src="images/Social/facebook.png" style="width: 15px;">
 					</a>
 					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<i class="fa fa-twitter" aria-hidden="true"></i>
+						<img src="images/Social/instagram.png" style="width: 15px;">
 					</a>
 					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<i class="fa fa-youtube-play" aria-hidden="true"></i>
+						<img src="images/Social/twitter.png" style="width: 15px;">
 					</a>
-					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<i class="fa fa-pinterest-p" aria-hidden="true"></i>
-					</a>
-					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<i class="fa fa-tumblr" aria-hidden="true"></i>
-					</a>
-					<a href="#" class="nav-link md-p-0 d-inline-block">
-						<i class="fa fa-instagram" aria-hidden="true"></i>
-					</a>
+					
 				</div>
 				<p class="text-center mt-2">
 					©2020 by MarkeTeam, Inc
