--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<!-- Header area section [end] -->
 	<main>
-	<div class="header-section p-3" id="header_Stick">
+	<div class="header-section p-3" id="header_Sticky">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
